no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: d584ac35a7b1d149d31abdc37d96d77f5ef44840

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-eu/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-eu/strings.xml
@@ -3011,10 +3011,60 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Interneterako
 konexiorik
 ez
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Badirudi
+zure
+Interneterako
+konexioak
+arazoren
+bat
+duela
 <
 /
 string
@@ -3049,6 +3099,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Egiaztatu
 zure
@@ -3060,6 +3124,96 @@ orria
 berritzen
 geroago
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Saiatu
+beste
+gailu
+batekin
+konektatzen
+.
+Egiaztatu
+zure
+modem
+edo
+routerra
+.
+Deskonektatu
+eta
+konektatu
+berriro
+Wi
+-
+Fi
+sarera
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Errore
+-
+kodea
+:
+NS_ERROR_OFFLINE
 <
 /
 string
