--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nn-rNO/strings.xml
@@ -3103,6 +3103,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Inga
 internetttilkopling
@@ -3140,6 +3154,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sjekk
 nettverkstilkoplinga
@@ -3155,6 +3183,38 @@ om
 ei
 stund
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Feilkode
+:
+NS_ERROR_OFFLINE
 <
 /
 string
