--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
@@ -2509,6 +2509,41 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
@@ -5509,6 +5544,58 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Mozilla
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5536,6 +5623,51 @@ ignore
 =
 "
 UnusedResources
+"
+>
+Mozilla
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
 "
 >
 Mozilla
