--- a/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
@@ -7097,6 +7097,61 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Amsedday
+n
+unadi
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Home
 onboarding
 -
@@ -8711,6 +8766,72 @@ UnusedResources
 Ma
 i
 tura
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Mudd
+udem
+i
+Firefox
+s
+yise
+anen
 <
 /
 string
@@ -20900,6 +21021,50 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+D
+tidet
+teb
+id
+ad
+tekkse
+iferdisen
+i
+yettwafernen
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -21013,6 +21178,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Tacre
@@ -22004,13 +22183,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Iferdisen
 yettwakksen
@@ -22507,13 +22679,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Akaram
@@ -26583,6 +26748,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ticra
 n
@@ -26634,13 +26813,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Ticra
