--- a/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
@@ -8849,6 +8849,39 @@ string
 !
 -
 -
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Vurdert
+%
+1
+s
+av
+5
+<
+/
+string
+>
+<
+!
+-
+-
 Search
 Widget
 -
@@ -20260,6 +20293,20 @@ name
 "
 bookmark_saved_snackbar
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Bokmerke
 lagra
@@ -21228,13 +21275,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Sletta
 element
@@ -21718,13 +21758,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Ny
@@ -25746,6 +25779,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Bokmerke
 lagra
@@ -25795,13 +25842,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Bokmerke
