--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rES/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rES/strings.xml
@@ -3286,9 +3286,63 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 No
 hay
+conexi
+n
+a
+Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+hay
+un
+problema
+con
+la
 conexi
 n
 a
@@ -3327,6 +3381,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifica
 tu
@@ -3346,6 +3414,101 @@ en
 unos
 momentos
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Intenta
+conectarte
+en
+un
+dispositivo
+diferente
+.
+Verifica
+tu
+m
+dem
+o
+router
+.
+Descon
+ctate
+y
+vuelve
+a
+conectarte
+al
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+error
+:
+NS_ERROR_OFFLINE
 <
 /
 string
