--- a/netwerk/locales/en-US/necko.properties
+++ b/netwerk/locales/en-US/necko.properties
@@ -53,6 +53,89 @@ MPL
 0
 /
 .
+3
+=
+Looking
+up
+%
+1
+S
+4
+=
+Connected
+to
+%
+1
+S
+5
+=
+Sending
+request
+to
+%
+1
+S
+6
+=
+Transferring
+data
+from
+%
+1
+S
+7
+=
+Connecting
+to
+%
+1
+S
+8
+=
+Read
+%
+1
+S
+9
+=
+Wrote
+%
+1
+S
+10
+=
+Waiting
+for
+%
+1
+S
+11
+=
+Looked
+up
+%
+1
+S
+12
+=
+Performing
+a
+TLS
+handshake
+to
+%
+1
+S
+13
+=
+The
+TLS
+handshake
+finished
+for
+%
+1
+S
 RepostFormData
 =
 This
