Bug 1926020 - Change browsing mode button into toggle button. r=android-reviewers,tchoh
Differential Revision: https://phabricator.services.mozilla.com/D226709

UltraBlame original commit: ef3696b8819b58719a025a2a081a8cccbc24f4e0

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -297,8 +297,7 @@ name
 content_description_private_browsing_button
 "
 >
-Enable
-private
+Private
 browsing
 <
 /
@@ -340,6 +339,46 @@ content_description_disable_private_browsing_button
 >
 Disable
 private
+browsing
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Private
 browsing
 <
 /
