no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 3281e5bba33be13847be677e7e3496b2bea5ed35

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
@@ -2791,6 +2791,42 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+Eikuaave
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
