--- a/mobile/android/fenix/app/src/main/res/values-uk/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-uk/strings.xml
@@ -8391,6 +8391,94 @@ string
 !
 -
 -
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+%
+1
+s
+5
+<
+/
+string
+>
+<
+!
+-
+-
 Search
 Widget
 -
@@ -18540,6 +18628,41 @@ name
 =
 "
 bookmark_delete_folder_confirmation_dialog
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
 "
 >
 ?
