--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gn/strings.xml
@@ -3179,6 +3179,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ndaikat
 i
@@ -3219,6 +3233,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ehechajey
 ne
@@ -3233,6 +3261,39 @@ kuatiarogue
 ag
 amieve
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Ayvu
+jejavygua
+:
+NS_ERROR_OFFLINE
 <
 /
 string
