--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-th/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-th/strings.xml
@@ -2342,6 +2342,49 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
 >
 <
 /
@@ -2376,6 +2419,20 @@ name
 =
 "
 mozac_browser_errorpages_no_internet_message
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
