--- a/browser/locales/en-US/chrome/overrides/appstrings.properties
+++ b/browser/locales/en-US/chrome/overrides/appstrings.properties
@@ -733,6 +733,22 @@ in
 this
 context
 .
+cspMediaBlocked
+=
+This
+page
+has
+a
+content
+security
+policy
+that
+prevents
+it
+from
+being
+displayed
+.
 corruptedContentErrorv2
 =
 The
