--- a/dom/locales/en-US/chrome/appstrings.properties
+++ b/dom/locales/en-US/chrome/appstrings.properties
@@ -611,6 +611,22 @@ in
 this
 context
 .
+cspMediaBlocked
+=
+This
+page
+has
+a
+content
+security
+policy
+that
+prevents
+it
+from
+being
+displayed
+.
 corruptedContentErrorv2
 =
 The
